# Notes

./: README.md
2DNN/: iris_classifier_extended.py  main.py
2DNN/cuda_kernels/: dense_eval.py
2DNN/layers/: __init__.py  attention_layer.py  dense_layer.py  softmax_layer.py
2DNN/network/: sequential_network.py
2DNN/utils/: __init__.py  cross_entropy.py  data_processing.py
Cuda/: REPORT-15TO23.nsys-view
Cuda/src/: Makefile  main.cpp  nsys.sh
Cuda/src/include/: Operations.h
Cuda/src/reports/: program10.nsys-rep  program10.sqlite  program11.nsys-rep  program11.sqlite  program12.nsys-rep  program12.sqlite  program13.nsys-rep  program13.sqlite  program14.nsys-rep  program14.sqlite  program15.nsys-rep  program15.sqlite  program16.nsys-rep  program16.sqlite  program17.nsys-rep  program17.sqlite  program18.nsys-rep  program18.sqlite  program19.nsys-rep  program19.sqlite  program20.nsys-rep  program20.sqlite  program21.nsys-rep  program21.sqlite  program22.nsys-rep  program22.sqlite  program23.nsys-rep
Cuda/src/src/: Operations.cu
Cuda_kernels/: README.md  X86_profiler.py  gpu_analysis_utils.py  run_project.sh  x86_streamlit_app.py
Cuda_kernels/CNN/: CMakeLists.txt  README.md  main.cpp  setup.py
Cuda_kernels/CNN/cmake/: setup_config.py.in
Cuda_kernels/CNN/include/: CNN.h
Cuda_kernels/CNN/src/: CNN.cpp  CNN.cu  CNN.py  pycuda_wrapper.cpp
Cuda_kernels/CNN/tests/: test_cnn.py
Cuda_kernels/conv/: .gitignore  CMakeLists.txt  README.md  main.cpp
Cuda_kernels/conv/assets/: resize.py
Cuda_kernels/conv/include/: ConvolutionSolverCPU.h  ConvolutionSolverGPU.h
Cuda_kernels/conv/src/: ConvolutionSolverCPU.cpp  ConvolutionSolverCUDA.cu  ConvolutionSolverGPU.cpp
Cuda_kernels/conv/tests/: test_convolution.cpp
Cuda_kernels/conv/x86_results/: test_conv2d_output_x86  test_conv2d_output_x86.csv  test_conv2d_output_x86.txt
Cuda_kernels/heat_equation_solver/: CMakeLists.txt  README.md  main.cpp  setup.py
Cuda_kernels/heat_equation_solver/cmake/: setup_config.py.in
Cuda_kernels/heat_equation_solver/include/: HeatEquationSolver.h
Cuda_kernels/heat_equation_solver/src/: HeatEquationSolver.cpp  HeatEquationSolver.cu  HeatEquationSolver.py  pycuda_wrapper.cpp
Cuda_kernels/heat_equation_solver/tests/: test_heat_equation.py
Cuda_kernels/hessian/: .gitignore  CMakeLists.txt  README.md  ab.py  main.cpp  setup.py
Cuda_kernels/hessian/.ipynb_checkpoints/: Untitled-checkpoint.ipynb
Cuda_kernels/hessian/hessian_inversion/: __init__.py  hessian_inversion.py
Cuda_kernels/hessian/include/: HessianInversionCPU.h  HessianInversionCPU.tpp  HessianInversionGPU.h
Cuda_kernels/hessian/python/hessian_inversion/: __init__.py  hessian_inversion.py
Cuda_kernels/hessian/python/hessian_inversion.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
Cuda_kernels/hessian/src/: HessianInversionCPU.cpp  HessianInversionGPU.cu  cpu_pybind_wrapper.cpp  gpu_pybind_wrapper.cpp
Cuda_kernels/hessian/tests/: test_hessian_inversion.py
Cuda_kernels/max-distance/: CMakeLists.txt  main.cpp
Cuda_kernels/max-distance/include/: DistanceCalculator.h
Cuda_kernels/max-distance/src/: DistanceCalculator.cpp  DistanceCalculator.cu
Cuda_kernels/x86_results/: test_compute_output_x86  test_compute_output_x86.csv  test_compute_output_x86.txt  test_conv2d_output_x86  test_conv2d_output_x86.csv  test_conv2d_output_x86.txt  test_distance_final_x86  test_distance_final_x86.csv  test_distance_final_x86.txt  test_heat_final_x86  test_heat_final_x86.csv  test_heat_final_x86.txt
DNN/: README.md  iris_network.onnx  iris_network1.json  iris_train_main.py  onnx_load.py
DNN/cuda_kernels/: __init__.py  attention.py  softmax.py
DNN/layers/: attention_layer.py  dense_layer.py  softmax_layer.py
DNN/network/: __init__.py  sequential_network.py
DNN/utils/: cross_entropy.py  data_processing.py
Numerical-Differentiation/: Makefile  README.md  derivative_cuda  output.txt  script.py  topology  v  vect.cpp
Numerical-Differentiation/src/: main.cpp
Numerical-Differentiation/src/include/: BackwardDerivative.h  CentralDerivative.h  CudaMathFunctions.h  ForwardDerivative.h  MathFunctions.h  Matmul.h  Topology.h
Numerical-Differentiation/src/src/: BackwardDerivative.cpp  CentralDerivative.cpp  CudaMathfunctions.cu  ForwardDerivative.cpp  MathFunctions.cpp  Matmul.cu  Topology.cpp
Riemann-surfaces/: README.md
Tensor/: .gitignore  CMakeLists.txt  TensorLibraryConfig.cmake.in  main.cpp
Tensor/cuda/: GPUStorage.cu  GPUTensor.cu
Tensor/include/: Device.h  GPUStorage.h  GPUTensor.h  Storage.h  Tensor.h  TensorFactory.h  TensorLibrary.h
Tensor/src/: Storage.cpp  Tensor.cpp  TensorFactory.cpp
Tensor/test-01/: CMakeLists.txt  test-01.cpp
Tensor/tests/: CMakeLists.txt  test_cpu_tensor.cpp  test_gpu_tensor.cu
Topology/: README.md
